RESOLVED FIXED97733
ApplicationCacheStorage does not optimilay handle 8 bit strings
https://bugs.webkit.org/show_bug.cgi?id=97733
Summary ApplicationCacheStorage does not optimilay handle 8 bit strings
Michael Saboff
Reported 2012-09-26 15:19:39 PDT
I several places, ApplicationCacheStorage calls characters() on strings, which will up convert an 8 bit string to 16 bits.
Attachments
Patch (3.84 KB, patch)
2012-09-26 16:02 PDT, Michael Saboff
ap: review+
Michael Saboff
Comment 1 2012-09-26 16:02:07 PDT
Darin Adler
Comment 2 2012-09-27 10:51:37 PDT
Comment on attachment 165890 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=165890&action=review > Source/WebCore/ChangeLog:3 > + ApplicationCacheStorage does not properly handle 8 bit strings In the future for patches like this I suggest more precise phrasing, because the code did correctly work if passed 8 bit strings before. I’d say something more like “converts 8-bit strings into 16-bit unnecessarily” or mention performance. The phrase “does not properly handle” sounds like we’ll get incorrect results, but this patch is about performance optimization, not correctness.
Michael Saboff
Comment 3 2012-09-27 12:04:44 PDT
Note You need to log in before you can comment on or make changes to this bug.