ApplicationCacheStorage does not optimally handle 8 bit strings https://bugs.webkit.org/show_bug.cgi?id=97733

Reviewed by Alexey Proskuryakov.

Added 8 bit string paths.

No functional change, therefore no new tests.

* loader/appcache/ApplicationCacheStorage.cpp:
(WebCore::urlHostHash):
(WebCore::ApplicationCacheStorage::store):
(WebCore::parseHeader):
(WebCore::parseHeaders):


Canonical link: https://commits.webkit.org/115797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129786 268f45cc-cd09-0410-ab3c-d52691b4dbfc